# paper-implementations

./: .gitignore  README.md
JAX_implementations/basics/: basics.ipynb  basics2.ipynb
JAX_implementations/linear_regression/: demo.ipynb  linear_regression.py
cpp_implementations/identity_test/: CMakeLists.txt  identity-test.cpp
cpp_implementations/transformer/: CMakeLists.txt  README.md  driver.cpp  transformer.cpp
cpp_implementations/transformer/builds/: CMakeCache.txt  Makefile  build.sh  cmake_install.cmake  transformer
cpp_implementations/transformer/components/: attention.cpp  attention.hpp  embedding.cpp  embedding.hpp  layer_norm.cpp  layer_norm.hpp  multi_layer_perceptron.cpp  multi_layer_perceptron.hpp  transformer.cpp  transformer.hpp  transformer_block.cpp  transformer_block.hpp  unembedding.cpp  unembedding.hpp
py_implementations/PGD/: pgd.py
py_implementations/cnn_from_scratch/: cnn.py  cnn_demo.ipynb
py_implementations/cnn_resnet/: README.md  cnn.py
